segunda entrega lista

--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@
 }
 
 .call p{
-    width: 35%;
+    width: 55%;
     text-shadow: -2px -2px 3px #000;
 }
 
@@ -93,31 +93,6 @@
     margin: auto 0;
 }
 
-/* Footer */
-
-footer {
-    text-align: center;
-    font-size: 25px;
-    padding: 20px;
-}
-
-footer a{
-    text-decoration: none;
-    font-size: 40px;
-}
-
-footer i:hover {
-    color: orange;
-}
-
-footer div {
-    display: inline-block;
-}
-
-.redes {
-    letter-spacing: 15px;
-}
-
 /* INDEX.HTML */
 .wsp {
     height: 40px;
@@ -139,7 +114,7 @@ footer div {
 
 /* Formulario inicio */
 .container-form {
-    height: 90vh;
+    height: 90%;
     background-image: linear-gradient(rgba(27, 51, 102, 0.843), rgba(59, 148, 203, 0.843)) ,url(../imgs/FONDO-BLANCO.png);
     background-size: 100% cover;
     background-repeat: no-repeat;
@@ -166,15 +141,134 @@ footer div {
     font-size: 20px;
     width: 100%;    
     padding: 3px 0;
+    border: none;
+    border-bottom: 4px solid #000;
 }
 
 input::placeholder, textarea::placeholder{
     color: white;
-    border-bottom: 4px solid #000;
 }
-
 
 /* Formulario fin */
 
+/* Us Inicio */
+.sec-us {
+    background-image: linear-gradient(rgba(27, 51, 102, 0.843), rgba(59, 148, 203, 0.843));
+}
+.card-us {
+    background-color: #fff;
+    text-align: center;
+    border: 1px solid #000;
+    border-radius: 6px;
+    box-shadow: 0 0 8px #000;
+    background-image: linear-gradient(to bottom right, #FFF, #BBB);
+}
 
+article img {
+    object-fit: cover;
+    border-radius: 5px;
+    margin-top: 30px;
+}
 
+.card-title-us {
+    font-size: 35px;
+    margin-bottom: -30px;
+}
+
+.card-redes a{
+    color: orange;
+    text-decoration: none;
+    font-size: 25px;
+}
+/* Us fin */
+
+/* Login inicio */
+
+.sec-log {
+    height: 85vh;
+}
+
+.card-log {
+    width: 450px;
+    background-color: #fff;
+    text-align: center;
+    border: 4px inset #3B94CB;
+    border-radius: 5px;
+    box-shadow: 0 0 5px #000;
+}
+
+.card-img-log {
+    background-size: cover;
+    background-position: center;
+}
+
+.form-log {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.form-log label {
+    margin-bottom: 6px;
+    font-weight: bold;
+}
+
+.form-log input {
+    width: 60%;
+    margin: 0 auto;
+    margin-bottom: 5px;
+    padding: 3px;
+    border-radius: 2px;
+}
+
+#submit-log {
+    margin-top: 10px;
+    width: 100px;
+    padding: 8px;
+    font-size: 15px;
+    background: rgba(255, 166, 0, 0.558);
+    font-weight: bold;
+}
+
+#submit-log:hover {
+    background-color: #333;
+    color: #fff;
+}
+
+/* Login fin */
+
+/* Footer inicio */
+
+footer {
+    text-align: center;
+    font-size: 25px;
+    padding: 15px;
+}
+
+footer a{
+    text-decoration: none;
+    font-size: 20px;
+}
+
+footer i:hover {
+    color: orange;
+}
+
+footer div {
+    display: inline-block;
+}
+
+.redes {
+    letter-spacing: 15px;
+}
+
+/* Footer fin */
+
+/* Responsive */
+/* 0 hasta 480px */
+
+@media (max-width: 480px) {
+    footer {
+        font-size: 20px;
+    }
+}
